--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,11 @@
     "builds": [
       {
         "src": "frontend/package.json",
-        "use": "@vercel/node",
+        "use": "@vercel/static-build",
         "config": {
-          "maxLambdaSize": "50mb"
+          "distDir": "frontend/dist" 
         }
       }
-    ],
-    "scripts": {
-      "build": "npm install --legacy-peer-deps && npm run build"
-    }
+    ]
   }
   
