--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,10 @@
 {
-    "builds": [
-      {
-        "src": "frontend/package.json",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "frontend/dist" 
-        }
+    "build": {
+      "env": {
+        "NODE_ENV": "production"
       }
-    ]
+    },
+    "installCommand": "npm install --legacy-peer-deps",
+    "buildCommand": "npm run build"
   }
   
