--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6",
-    "zustand": "^5.0.0"
+    "zustand": "^5.0.0",
+     "vite": "^5.4.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
