--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,8 @@
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6",
     "zustand": "^5.0.0",
-     "vite": "^5.4.9"
+     "vite": "^5.4.9",
+      "@vitejs/plugin-react": "^4.3.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
