--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.6",
+    "@vitejs/plugin-react": "^4.3.3",
     "axios": "^1.7.7",
     "firebase": "^11.0.1",
     "framer-motion": "^11.11.9",
@@ -22,20 +23,17 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
-    "react-password-strength": "^2.4.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6",
-    "zustand": "^5.0.0",
-     "vite": "^5.4.9",
-      "@vitejs/plugin-react": "^4.3.3",
-      "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "vite": "^5.4.9",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
-
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.1",
@@ -43,7 +41,5 @@
     "eslint-plugin-react-refresh": "^0.4.13",
     "globals": "^15.11.0",
     "postcss": "^8.4.47"
-    
-   
   }
 }
