--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
+    "emailjs-com": "^3.2.0",
     "expess": "^0.0.1-security",
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
